Update to index page

--- a/index.html
+++ b/index.html
@@ -1,11 +1,71 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Bernard Teo</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Bernard Teo Zhi Yi</title>
+<link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
 <body>
-Hello world!
+<div id="title">
+<img class="profileimage" src="bernard.jpg" />
+<div class="name">Bernard Teo Zhi Yi</div>
+<div><span class="keyname">Email: </span><a href="mailto:bernardteo@u.nus.edu">bernardteo@u.nus.edu</a> | <span class="keyname">GitHub: </span><a href="https://github.com/btzy">btzy</a> | <span class="keyname">LinkedIn: </span><a href="https://www.linkedin.com/in/bernard-teo/">bernard-teo</a></div>
+</div>
+<hr/>
+
+<div>
+<p>I am currently studying computer science and applied mathematics at the National University of Singapore (NUS).  This is a double degree programme, which will allow me to graduate with a Bachelor of Computing (BComp) in Computer Science, as well as a Bachelor of Science (BSc) in Applied Mathematics.  I should graduate at around year 2021 or 2022.</p>
+<p>I have participated in many algorithmic programming competitions, such as the ACM-ICPC World Finals, the International Olympiad in Informatics (IOI), and the Google Code Jam.  When opportunities arise, I continue to participate in such competitions.</p>
+<p>I also tinker with things during my free time.  See below for some of my personal projects.</p>
+<p><span class="keyname">My resume:</span> <a href="https://btzy.github.io/resume.pdf">Link</a></p>
+</div>
+<hr/>
+
+<div>
+<p><span class="keyname">Interests:</span></p>
+<ul>
+<li>Algorithmic problem solving</li>
+<li>High-performance software development</li>
+<li>Lock-free and wait-free parallel programming</li>
+<li>C++ programming language</li>
+<li><span class="more">(and there might be more &hellip;)</span></li>
+</ul>
+</div>
+<hr/>
+
+<div>
+<p><span class="keyname">Work Experience:</span></p>
+<ul class="detailedlist">
+<li>
+<div class="header">Software Engineer Intern at Jump Trading</div>
+<div class="date">June &ndash; August 2019</div>
+</li>
+</ul>
+</div>
+<hr/>
+
+<div>
+<p><span class="keyname">Personal Projects:</span></p>
+<ul class="detailedlist">
+<li>
+<div class="header">Circuit Sandbox</div>
+<div class="date">May &ndash; August 2018</div>
+<div class="link"><a href="https://github.com/btzy/circuit-sandbox">GitHub repository</a> | <a href="https://btzy.github.io/circuit-sandbox-poster.pdf">Poster</a> | <img class="typeicon" src="font-awesome/windows.svg" /> <img class="typeicon" src="font-awesome/apple.svg" /> <img class="typeicon" src="font-awesome/linux.svg" /></div>
+<div class="content">Circuit Sandbox is a digital sandbox game where users can create arbitrarily complex circuits out of simple components.  To support large and complex simulations efficiently, Circuit Sandbox uses many careful optimisation techniques, such as lock-free multi-threading and C++ template metaprogramming.  Circuit Sandbox is a collaboration with <a href="http://kuanwh.com/">Kuan Wei Heng</a>, for our <span class="italicname">Independent Software Development Project (Orbital)</span> module at NUS.</div>
+<div class="content"><span class="semibold">Technologies:</span> C++17, Boost, SDL2</div>
+</li>
+</ul>
+</div>
+<hr/>
+
+<div>
+<p><span class="keyname">Competitive Programming:</span></p>
+(coming soon...)
+</div>
+<hr/>
+
 </body>
 
 </html>
