Underline the surname

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <div id="title">
 <img class="profileimage" src="bernard.jpg" />
-<div class="name">Bernard Teo Zhi Yi</div>
+<div class="name">Bernard <span class="underline">Teo</span> Zhi Yi</div>
 <div><span class="keyname">Email: </span><a href="mailto:bernardteo@u.nus.edu">bernardteo@u.nus.edu</a> | <span class="keyname">GitHub: </span><a href="https://github.com/btzy">btzy</a> | <span class="keyname">LinkedIn: </span><a href="https://www.linkedin.com/in/bernard-teo/">bernard-teo</a></div>
 </div>
 <hr/>
