Add Jelly Compiler

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div>
 <p>I am currently studying computer science and applied mathematics at the National University of Singapore (NUS).  This is a double degree programme, which will allow me to graduate with a Bachelor of Computing (BComp) in Computer Science, as well as a Bachelor of Science (BSc) in Applied Mathematics.  I should graduate at around year 2021 or 2022.</p>
 <p>I have participated in many algorithmic programming competitions, such as the ACM-ICPC World Finals, the International Olympiad in Informatics (IOI), and the Google Code Jam.  When opportunities arise, I continue to participate in such competitions.</p>
-<p>I also tinker with things during my free time.  See below for some of my personal projects.</p>
+<p>I also tinker with technologies and write some code during my free time.  See below for some of my personal projects.</p>
 <p><span class="keyname">My resume:</span> <a href="https://btzy.github.io/resume.pdf">Link</a></p>
 </div>
 <hr/>
@@ -49,6 +49,7 @@
 <div>
 <p><span class="keyname">Personal Projects:</span></p>
 <ul class="detailedlist">
+
 <li>
 <div class="header">Circuit Sandbox</div>
 <div class="date">May &ndash; August 2018</div>
@@ -56,6 +57,15 @@
 <div class="content">Circuit Sandbox is a digital sandbox game where users can create arbitrarily complex circuits out of simple components.  To support large and complex simulations efficiently, Circuit Sandbox uses many careful optimisation techniques, such as lock-free multi-threading and C++ template metaprogramming.  Circuit Sandbox is a collaboration with <a href="http://kuanwh.com/">Kuan Wei Heng</a>, for our <span class="italicname">Independent Software Development Project (Orbital)</span> module at NUS.</div>
 <div class="content"><span class="semibold">Technologies:</span> C++17, Boost, SDL2</div>
 </li>
+
+<li>
+<div class="header">Jelly Compiler for Brainfuck / wasm-codegen</div>
+<div class="date">March 2017</div>
+<div class="link"><a href="https://btzy.github.io/jelly">Try it here!</a> | <a href="https://github.com/btzy/jelly">GitHub repository</a> | <img class="typeicon" src="font-awesome/web.svg" /></div>
+<div class="content">Jelly is a browser-based compiler for <a href="https://en.wikipedia.org/wiki/Brainfuck">Brainfuck</a>, one of the most well-known esoteric programming languages.  Jelly features an optimising compiler (written in JavaScript) that compiles Brainfuck to WebAssembly, which can then be compiled to native code and executed in the browser.  This allows much faster execution as compared to other browser-based compilers.</div>
+<div class="content"><span class="semibold">Technologies:</span> JavaScript, WebAssembly</div>
+</li>
+
 </ul>
 </div>
 <hr/>
