Add NUS modules

--- a/index.html
+++ b/index.html
@@ -76,6 +76,55 @@
 </div>
 <hr/>
 
+<div>
+<p><span class="keyname">NUS Modules Taken:</span></p>
+<p>Here is an exhaustive list of modules that I have taken in NUS.  Where available, you may use my cheatsheets for your studies (but I cannot guarantee the correctness or completeness of any information on them).</p>
+
+<p class="modulegroup">AY 13/14 Sem 2 (A-levels H3 programme)</p>
+<ul>
+<li>MA1101R Linear Algebra I</li>
+</ul>
+
+<p class="modulegroup">AY 17/18 Sem 1</p>
+<ul>
+<li>CFG1010 Roots and Wings - Personal and Interpersonal Effectiveness 1.0</li>
+<li>CS1231 Discrete Structures | <a href="nus/CS1231.txt">Review</a> | <a href="nus/CS1231 Reference.pdf">Cheatsheet</a></li>
+<li>CS2030 Programming Methodology II | <a href="nus/CS2030.txt">Review</a> | <a href="nus/CS2030 Reference.docx">Cheatsheet</a></li>
+<li>GES1019 Managing Singapore's Built Environment | <a href="nus/GES1019.txt">Review</a></li>
+<li>MA1521 Calculus for Computing | <a href="nus/MA1521.txt">Review</a> | <a href="nus/MA1521 Reference.pdf">Cheatsheet</a></li>
+<li>MA2101 Linear Algebra II | <a href="nus/MA2101.txt">Review</a> | <a href="nus/MA2101 Reference.pdf">Cheatsheet</a></li>
+</ul>
+
+<p class="modulegroup">AY 17/18 Sem 2</p>
+<ul>
+<li>CS2100 Computer Organisation | <a href="nus/CS2100.txt">Review</a> | <a href="nus/CS2100 Reference.pdf">Cheatsheet</a></li>
+<li>CS2105 Introduction to Computer Networks | <a href="nus/CS2105.txt">Review</a> | <a href="nus/CS2105 Reference.pdf">Cheatsheet</a></li>
+<li>CS3233 Competitive Programming</li>
+<li>CS3233R Competitive Programming (R)</li>
+<li>ES2660 Communicating in the Information Age | <a href="nus/ES2660.txt">Review</a></li>
+<li>GER1000 Quantitative Reasoning | <a href="nus/GER1000.txt">Review</a></li>
+<li>IS1103 IS Innovations in Organisations and Society | <a href="nus/IS1103.txt">Review</a></li>
+<li>MA2104 Multivariable Calculus | <a href="nus/MA2104.txt">Review</a> | <a href="nus/MA2104 Reference.pdf">Cheatsheet</a></li>
+</ul>
+
+<p class="modulegroup">AY 17/18 Summer Break</p>
+<ul>
+<li>CP2106 Independent Software Development Project (Orbital) | <a href="nus/CP2106.txt">Review</a> | <a href="https://github.com/btzy/circuit-sandbox">GitHub repository</a> | <a href="https://btzy.github.io/circuit-sandbox-poster.pdf">Poster</a> | <a href="https://www.youtube.com/watch?v=0RVUXjSf994">Video 1</a> | <a href="https://www.youtube.com/watch?v=lkfBC4iivmc">Video 2</a> | <a href="https://www.youtube.com/watch?v=DmSCg-yd0Uo">Video 3</a></li>
+</ul>
+
+<p class="modulegroup">AY 18/19 Sem 1</p>
+<ul>
+<li>CS2101 Effective Communication for Computing Professionals | <a href="nus/CS2101.txt">Review</a></li>
+<li>CS2103T Software Engineering | <a href="nus/CS2103T.txt">Review</a></li>
+<li>CS2106 Introduction to Operating Systems | <a href="nus/CS2106.txt">Review</a> | <a href="nus/CS2106 Reference.pdf">Cheatsheet</a></li>
+<li>CS3210 Parallel Computing | <a href="nus/CS3210.txt">Review</a> | <a href="nus/CS3210 Reference.pdf">Cheatsheet</a></li>
+<li>CS3230 Design and Analysis of Algorithms | <a href="nus/CS3230.txt">Review</a></li>
+<li>GEQ1000 Asking Questions | <a href="nus/GEQ1000.txt">Review</a></li>
+<li>MA3218 Applied Algebra | <a href="nus/MA3218.txt">Review</a> | <a href="nus/MA3218 Reference.pdf">Cheatsheet</a></li>
+</ul>
+</div>
+<hr/>
+
 </body>
 
 </html>
