--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 <div>
 <p><span class="keyname">NUS Modules Taken:</span></p>
-<p>Here is an exhaustive list of modules that I have taken in NUS.  Where available, you may use my cheatsheets for your studies (but I cannot guarantee the correctness or completeness of any information on them).</p>
+<p>Here is an exhaustive list of modules that I have taken in NUS.  Where available, you may use my cheatsheets for your studies (but I cannot guarantee the correctness or completeness of any information on them).  If you want the LaTeX source, you have to ask for it.</p>
 
 <p class="modulegroup">AY 13/14 Sem 2 (A-levels H3 programme)</p>
 <ul>
@@ -115,7 +115,7 @@
 <p class="modulegroup">AY 18/19 Sem 1</p>
 <ul>
 <li>CS2101 Effective Communication for Computing Professionals | <a href="nus/CS2101.txt">Review</a></li>
-<li>CS2103T Software Engineering | <a href="nus/CS2103T.txt">Review</a></li>
+<li>CS2103T Software Engineering | <a href="nus/CS2103T.txt">Review</a> | <a href="https://github.com/CS2103-AY1819S1-W17-4/main">GitHub repository</a></li>
 <li>CS2106 Introduction to Operating Systems | <a href="nus/CS2106.txt">Review</a> | <a href="nus/CS2106 Reference.pdf">Cheatsheet</a></li>
 <li>CS3210 Parallel Computing | <a href="nus/CS3210.txt">Review</a> | <a href="nus/CS3210 Reference.pdf">Cheatsheet</a></li>
 <li>CS3230 Design and Analysis of Algorithms | <a href="nus/CS3230.txt">Review</a></li>
