Add competitive programming, olympiad math, and more

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <p>I am currently studying computer science and applied mathematics at the National University of Singapore (NUS).  This is a double degree programme, which will allow me to graduate with a Bachelor of Computing (BComp) in Computer Science, as well as a Bachelor of Science (BSc) in Applied Mathematics.  I should graduate at around year 2021 or 2022.</p>
 <p>I have participated in many algorithmic programming competitions, such as the ACM-ICPC World Finals, the International Olympiad in Informatics (IOI), and the Google Code Jam.  When opportunities arise, I continue to participate in such competitions.</p>
 <p>I also tinker with technologies and write some code during my free time.  See below for some of my personal projects.</p>
-<p><span class="keyname">My resume:</span> <a href="https://btzy.github.io/resume.pdf">Link</a></p>
+<p><span class="keyname">My resume: </span><a href="https://btzy.github.io/resume.pdf">Link</a></p>
 </div>
 <hr/>
 
@@ -57,7 +57,7 @@
 <hr/>
 
 <div>
-<p><span class="keyname">Personal Projects:</span></p>
+<p><span class="keyname">Personal Software Projects:</span></p>
 <ul class="detailedlist">
 
 <li>
@@ -82,7 +82,81 @@
 
 <div>
 <p><span class="keyname">Competitive Programming:</span></p>
-(coming soon...)
+<ul class="detailedlist">
+
+<li>
+<div class="header">International Collegiate Programming Contest (ICPC)</div>
+<ul>
+<li>62<sup>nd</sup> at ACM-ICPC World Finals 2019</li>
+<li>1<sup>st</sup> at ACM-ICPC Yangon On-Site Regional Contest 2018</li>
+<li>7<sup>th</sup> at ACM-ICPC Singapore On-Site Regional Contest 2018</li>
+<li>5<sup>th</sup> at ACM-ICPC Jakarta On-Site Regional Contest 2017</li>
+</ul>
+</li>
+
+<li>
+<div class="header">Code Jam (Handle: btzy)</div>
+<ul>
+<li>295<sup>th</sup> (round 3) in 2018</li>
+<li>834<sup>th</sup> (round 2) in 2017</li>
+<li>166<sup>th</sup> (round 3) in 2016</li>
+<li>952<sup>nd</sup> (round 2) in 2015</li>
+</ul>
+</li>
+
+<li>
+<div class="header">Distributed Code Jam (Handle: btzy)</div>
+<ul>
+<li>155<sup>th</sup> in 2017</li>
+<li>79<sup>th</sup> in 2016</li>
+</ul>
+</li>
+
+<li>
+<div class="header">International Olympiad in Informatics (IOI)</div>
+<ul>
+<li>Bronze Medal in 2013</li>
+<li>Participation in 2012 :(</li>
+</ul>
+</li>
+
+<li>
+<div class="header">Codeforces (Handle: <a href="https://codeforces.com/profile/btzy">btzy</a>)</div>
+<ul>
+<li>Various random contests</li>
+</ul>
+</li>
+
+<li>
+<div class="header">Kattis (Handle: <a href="https://open.kattis.com/users/btzy">btzy</a>)</div>
+<ul>
+<li>Doing some problems, with the aim of creating the fastest solution for each problem I solve</li>
+</ul>
+</li>
+</ul>
+</div>
+<hr/>
+
+<div>
+<p><span class="keyname">Olympiad Mathematics:</span></p>
+<ul class="detailedlist">
+
+<li>
+<div class="header">Simon Marais Mathematics Competition (SMMC)</div>
+<ul>
+<li>31 out of 56 in 2018</li>
+</ul>
+</li>
+
+<li>
+<div class="header">Singapore Mathematical Olympiad (SMO)</div>
+<ul>
+<li>Silver Award (Open Category) in 2014</li>
+<li>Silver Award (Open Category) in 2013</li>
+</ul>
+</li>
+
+</ul>
 </div>
 <hr/>
 
@@ -132,6 +206,21 @@
 <li>GEQ1000 Asking Questions | <a href="nus/GEQ1000.txt">Review</a></li>
 <li>MA3218 Applied Algebra | <a href="nus/MA3218.txt">Review</a> | <a href="nus/MA3218 Reference.pdf">Cheatsheet</a></li>
 </ul>
+
+<p class="modulegroup">AY 18/19 Sem 2</p>
+<ul>
+<li>CP3108B Independent Work (self-directed training for ICPC World Finals)</li>
+<li>CS3203 Software Engineering Project</li>
+<li>CS4231 Parallel and Distributed Algorithms</li>
+<li>MA2108S Mathematical Analysis I (S)</li>
+</ul>
+
+</div>
+<hr/>
+
+<div>
+<p><span class="keyname">Personal Non-Software Projects:</span></p>
+(coming soon...)
 </div>
 <hr/>
 
