--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@
 <p class="modulegroup">AY 18/19 Sem 2</p>
 <ul>
 <li>CP3108B Independent Work (self-directed training for ICPC World Finals)</li>
-<li>CS3203 Software Engineering Project</li>
-<li>CS4231 Parallel and Distributed Algorithms</li>
+<li>CS3203 Software Engineering Project | <a href="nus/CS3203.txt">Review</a></li>
+<li>CS4231 Parallel and Distributed Algorithms | <a href="nus/CS4231.txt">Review</a> | <a href="nus/CS4231 Reference.pdf">Cheatsheet</a></li>
 <li>MA2108S Mathematical Analysis I (S)</li>
 </ul>
 
