Update index.html to add CP3200 internship and GCJ 2019

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <p><span class="keyname">Work Experience:</span></p>
 <ul class="detailedlist">
 <li>
-<div class="header">Software Engineer Intern at Jump Trading</div>
+<div class="header">Software Engineer Intern (Core Development) at Jump Trading</div>
 <div class="date">June &ndash; August 2019</div>
 </li>
 </ul>
@@ -95,6 +95,7 @@
 <li>
 <div class="header">Code Jam (Handle: btzy)</div>
 <ul>
+<li>51<sup>st</sup> (round 3) in 2019</li>
 <li>295<sup>th</sup> (round 3) in 2018</li>
 <li>834<sup>th</sup> (round 2) in 2017</li>
 <li>166<sup>th</sup> (round 3) in 2016</li>
@@ -211,6 +212,11 @@
 <li>CS3203 Software Engineering Project | <a href="nus/CS3203.txt">Review</a></li>
 <li>CS4231 Parallel and Distributed Algorithms | <a href="nus/CS4231.txt">Review</a> | <a href="nus/CS4231 Reference.pdf">Cheatsheet</a></li>
 <li>MA2108S Mathematical Analysis I (S) | <a href="nus/MA2108S.txt">Review</a></li>
+</ul>
+
+<p class="modulegroup">AY 18/19 Summer Break</p>
+<ul>
+<li>CP3200 Internship (summer internship at Jump Trading)</li>
 </ul>
 
 </div>
