Update SMMC description to be clearer

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 <li>
 <div class="header">Simon Marais Mathematics Competition (SMMC)</div>
 <ul>
-<li>31 out of 56 in 2018</li>
+<li><a href="https://www.simonmarais.org/2018.html">Top Quartile in 2018 (scored 31 out of 56 points)</a></li>
 </ul>
 </li>
 
