Update graduation date

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <hr/>
 
 <div>
-<p>I am currently studying computer science and applied mathematics at the National University of Singapore (NUS).  This is a double degree programme, which will allow me to graduate with a Bachelor of Computing (BComp) in Computer Science, as well as a Bachelor of Science (BSc) in Applied Mathematics.  I should graduate at around year 2021 or 2022.</p>
+<p>I am currently studying computer science and applied mathematics at the National University of Singapore (NUS).  This is a double degree programme, which will allow me to graduate with a Bachelor of Computing (BComp) in Computer Science, as well as a Bachelor of Science (BSc) in Applied Mathematics.  I should graduate in May or November 2021.</p>
 <p>I have participated in many algorithmic programming competitions, such as the ACM-ICPC World Finals, the International Olympiad in Informatics (IOI), and the Google Code Jam.  When opportunities arise, I continue to participate in such competitions.</p>
 <p>I also tinker with technologies and write some code during my free time.  See below for some of my personal projects.</p>
 </div>
