Add better description for Jump internship

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <li>
 <div class="header">Software Engineer Intern (Core Development) at Jump Trading</div>
 <div class="date">June &ndash; August 2019</div>
-<div class="content">This internship comprised a four-week training programme at the Chicago headquarters, and then six weeks of work at the Singapore office.  I worked on their trading platform, which is used by trading teams to communicate efficiently with exchanges.</div>
+<div class="content">This internship comprised a four-week training programme at the Chicago headquarters, and then six weeks of work at the Singapore office.  I worked on the portion of the trading platform that receives market data, which is used by trading teams to efficiently receive and parse data from exchanges.  My work improved the compilation time and execution performance of the trading platform.</div>
 <div class="content"><span class="semibold">Technologies:</span> C++14/17</div>
 </li>
 </ul>
