--- a/index.html
+++ b/index.html
@@ -87,9 +87,12 @@
 <li>
 <div class="header">International Collegiate Programming Contest (ICPC)</div>
 <ul>
+<li>??? at ACM-ICPC World Finals 2020</li>
+<li>1<sup>st</sup> at ACM-ICPC Kuala Lumpur On-Site Regional Contest 2019</li>
+<li>4<sup>th</sup> at ACM-ICPC Bangkok On-Site Regional Contest 2019</li>
 <li>62<sup>nd</sup> at ACM-ICPC World Finals 2019</li>
-<li>1<sup>st</sup> at ACM-ICPC Yangon On-Site Regional Contest 2018</li>
 <li>7<sup>th</sup> at ACM-ICPC Singapore On-Site Regional Contest 2018</li>
+<li>1<sup>st</sup> at ACM-ICPC Yangon On-Site Regional Contest 2018</li>
 <li>5<sup>th</sup> at ACM-ICPC Jakarta On-Site Regional Contest 2017</li>
 </ul>
 </li>
@@ -145,7 +148,7 @@
 <li>
 <div class="header">Simon Marais Mathematics Competition (SMMC)</div>
 <ul>
-<li><a href="https://www.simonmarais.org/2018.html">Top Quartile in 2018 (scored 31 out of 56 points)</a></li>
+<li><a href="https://www.simonmarais.org/20183.html">Top Quartile in 2018 (scored 31 out of 56 points)</a></li>
 </ul>
 </li>
 
@@ -219,6 +222,17 @@
 <p class="modulegroup">AY 18/19 Summer Break</p>
 <ul>
 <li>CP3200 Internship (summer internship at Jump Trading)</li>
+</ul>
+
+<p class="modulegroup">AY 19/20 Sem 1</p>
+<ul>
+<li>CS2104 Programming Language Concepts</li>
+<li>CS4234 Optimisation Algorithms</li>
+<li>CS4261 Algorithmic Mechanism Design</li>
+<li>MA2213 Numerical Analysis I</li>
+<li>MA2214 Combinatorics and Graphs I</li>
+<li>MA3110S Mathematical Analysis II (S)</li>
+<li>ST2131 Probability</li>
 </ul>
 
 </div>
