Add reviews and cheatsheets for AY19/20 sem 1

--- a/index.html
+++ b/index.html
@@ -226,13 +226,13 @@
 
 <p class="modulegroup">AY 19/20 Sem 1</p>
 <ul>
-<li>CS2104 Programming Language Concepts</li>
-<li>CS4234 Optimisation Algorithms</li>
-<li>CS4261 Algorithmic Mechanism Design</li>
-<li>MA2213 Numerical Analysis I</li>
-<li>MA2214 Combinatorics and Graphs I</li>
-<li>MA3110S Mathematical Analysis II (S)</li>
-<li>ST2131 Probability</li>
+<li>CS2104 Programming Language Concepts | <a href="nus/CS2104.txt">Review</a></li>
+<li>CS4234 Optimisation Algorithms | <a href="nus/CS4234.txt">Review</a> | <a href="nus/CS4234 Reference.pdf">Cheatsheet</a></li>
+<li>CS4261 Algorithmic Mechanism Design | <a href="nus/CS4261.txt">Review</a> | <a href="nus/CS4261 Reference.pdf">Cheatsheet</a></li>
+<li>MA2213 Numerical Analysis I | <a href="nus/MA2213.txt">Review</a> | <a href="nus/MA2213 Reference.pdf">Cheatsheet</a></li>
+<li>MA2214 Combinatorics and Graphs I | <a href="nus/MA2214.txt">Review</a></li>
+<li>MA3110S Mathematical Analysis II (S) | <a href="nus/MA3110S Reference.pdf">Cheatsheet</a></li>
+<li>ST2131 Probability | <a href="nus/ST2131.txt">Review</a></li>
 </ul>
 
 </div>
