Add TA duties to homepage

--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
 <div class="header">Simon Marais Mathematics Competition (SMMC)</div>
 <ul>
 <li><a href="https://www.simonmarais.org/20183.html">Top Quartile in 2018 (scored 31 out of 56 points)</a></li>
+<li><a href="https://www.simonmarais.org/20191.html">Top Quartile in 2019 (scored 34 out of 56 points)</a></li>
 </ul>
 </li>
 
@@ -161,6 +162,27 @@
 </li>
 
 </ul>
+</div>
+<hr/>
+
+<div>
+<p><span class="keyname">NUS Modules Taught (teaching assistant):</span></p>
+
+<p class="modulegroup">AY 17/18 Sem 2</p>
+<ul>
+<li>CS2030 Programming Methodology II (conduct lab/tutorial sessions)</li>
+</ul>
+
+<p class="modulegroup">AY 18/19 Sem 1</p>
+<ul>
+<li>CS2030 Programming Methodology II (conduct lab/tutorial sessions)</li>
+</ul>
+
+<p class="modulegroup">AY 19/20 Sem 1</p>
+<ul>
+<li>CS2106 Introduction to Operating Systems (conduct lab sessions; design and grade assignments)</li>
+</ul>
+
 </div>
 <hr/>
 
