Add AY1920S2 modules and WF20 postponement

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 <li>
 <div class="header">International Collegiate Programming Contest (ICPC)</div>
 <ul>
-<li>??? at ACM-ICPC World Finals 2020</li>
+<li>??? at ACM-ICPC World Finals 2020 (postponed to 2021)</li>
 <li>1<sup>st</sup> at ACM-ICPC Kuala Lumpur On-Site Regional Contest 2019</li>
 <li>4<sup>th</sup> at ACM-ICPC Bangkok On-Site Regional Contest 2019</li>
 <li>62<sup>nd</sup> at ACM-ICPC World Finals 2019</li>
@@ -255,6 +255,15 @@
 <li>MA2214 Combinatorics and Graphs I | <a href="nus/MA2214.txt">Review</a></li>
 <li>MA3110S Mathematical Analysis II (S) | <a href="nus/MA3110S Reference.pdf">Cheatsheet</a></li>
 <li>ST2131 Probability | <a href="nus/ST2131.txt">Review</a></li>
+</ul>
+
+<p class="modulegroup">AY 19/20 Sem 2</p>
+<ul>
+<li>CS4215 Programming Language Implementation</li>
+<li>MA3111 Complex Analysis I | <a href="nus/MA3111 Reference.pdf">Cheatsheet</a></li>
+<li>MA3233 Combinatorics and Graphs II | <a href="nus/MA3233 Reference.pdf">Cheatsheet</a></li>
+<li>MA4211 Functional Analysis | <a href="nus/MA4211 Reference.pdf">Cheatsheet</a></li>
+<li>GET1001 Seeing the World Through Maps</li>
 </ul>
 
 </div>
