Add scholarship and NOI SC experience

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <hr/>
 
 <div>
-<p>I am currently studying computer science and applied mathematics at the National University of Singapore (NUS).  This is a double degree programme, which will allow me to graduate with a Bachelor of Computing (BComp) in Computer Science, as well as a Bachelor of Science (BSc) in Applied Mathematics.  I should graduate in 2021.</p>
+<p>I am currently an undergraduate studying computer science and applied mathematics at the National University of Singapore (NUS).  This is a double degree programme, which will allow me to graduate with a Bachelor of Computing (BComp) in Computer Science, as well as a Bachelor of Science (BSc) in Applied Mathematics.  I am a recipient of the NUS Merit Scholarship.  I should graduate in 2021.</p>
 <p>I have participated in many algorithmic programming competitions, such as the ACM-ICPC World Finals, the International Olympiad in Informatics (IOI), and the Google Code Jam.  When opportunities arise, I continue to participate in such competitions.</p>
 <p>I also tinker with technologies and write some code during my free time.  See below for some of my personal projects.</p>
 </div>
@@ -76,6 +76,20 @@
 <div class="content"><span class="semibold">Technologies:</span> JavaScript, WebAssembly</div>
 </li>
 
+</ul>
+</div>
+<hr/>
+
+<div>
+<p><span class="keyname">Other Experience:</span></p>
+<ul class="detailedlist">
+<li>
+<div class="header">National Olympiad in Informatics (NOI) Scientific Committee</div>
+<div class="date">January &ndash; March 2017</div>
+<div class="date">January &ndash; March 2018</div>
+<div class="date">January &ndash; July 2020</div>
+<div class="content">The <a href="https://noisg.comp.nus.edu.sg/noi/">National Olympiad in Informatics</a> is an algorithmic problem solving competition for secondary school and junior college students in Singapore modelled after the International Olympiad in Informatics.  The scientific committee prepares and ensures quality control the tasks in the competition.  In 2017, I reviewed and tested the competition tasks.  In 2018, I designed and prepared some tasks which were eventually used in the competition.  In 2020, I was in charge of the scientific committee, and ensured the fairness and quality of the tasks.</div>
+</li>
 </ul>
 </div>
 <hr/>
