--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 <div class="date">January &ndash; March 2017</div>
 <div class="date">January &ndash; March 2018</div>
 <div class="date">January &ndash; July 2020</div>
-<div class="content">The <a href="https://noisg.comp.nus.edu.sg/noi/">National Olympiad in Informatics</a> is an algorithmic problem solving competition for secondary school and junior college students in Singapore, modelled after the International Olympiad in Informatics.  The scientific committee prepares and ensures quality control the tasks in the competition.  In 2017, I reviewed and tested the competition tasks.  In 2018, I designed and prepared some tasks which were eventually used in the competition.  In 2020, I was in charge of the scientific committee, and ensured the fairness and quality in the selection of tasks.</div>
+<div class="content">The <a href="https://noisg.comp.nus.edu.sg/noi/">National Olympiad in Informatics</a> is an algorithmic problem solving competition for secondary school and junior college students in Singapore, modelled after the International Olympiad in Informatics.  The scientific committee prepares and ensures quality control the tasks in the competition.  In 2017, I reviewed and tested the competition tasks.  In 2018, I designed and prepared some tasks which were eventually used in the competition.  In 2020, I was in charge of the scientific committee, and led the team in task selection and preparation, to ensure the quality and fairness of the competition tasks.</div>
 </li>
 </ul>
 </div>
