Add 2020 internship and GCJ, and minor adjustments

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <hr/>
 
 <div>
-<p>I am currently an undergraduate studying computer science and applied mathematics at the National University of Singapore (NUS).  This is a double degree programme, which will allow me to graduate with a Bachelor of Computing (BComp) in Computer Science, as well as a Bachelor of Science (BSc) in Applied Mathematics.  I am a recipient of the NUS Merit Scholarship.  I should graduate in 2021.</p>
+<p>I am currently an undergraduate studying computer science and applied mathematics at the National University of Singapore (NUS).  This is a double degree programme, which will allow me to graduate with a Bachelor of Computing (BComp) in Computer Science, as well as a Bachelor of Science (BSc) in Applied Mathematics.  I am a recipient of the NUS Merit Scholarship.  I should graduate in November 2021.</p>
 <p>I have participated in many algorithmic programming competitions, such as the ACM-ICPC World Finals, the International Olympiad in Informatics (IOI), and the Google Code Jam.  When opportunities arise, I continue to participate in such competitions.</p>
 <p>I also tinker with technologies and write some code during my free time.  See below for some of my personal projects.</p>
 </div>
@@ -46,12 +46,21 @@
 <div>
 <p><span class="keyname">Work Experience:</span></p>
 <ul class="detailedlist">
+
 <li>
 <div class="header">Software Engineer Intern (Core Development) at Jump Trading</div>
 <div class="date">June &ndash; August 2019</div>
 <div class="content">This internship comprised a four-week training programme at the Chicago headquarters, and then six weeks of work at the Singapore office.  I worked on the portion of the trading platform that receives market data, which is used by trading teams to efficiently receive and parse data from exchanges.  My work improved the compilation time and execution performance of the trading platform.</div>
 <div class="content"><span class="semibold">Technologies:</span> C++14/17</div>
 </li>
+
+<li>
+<div class="header">Software Engineer Intern (Core Development) at Jump Trading</div>
+<div class="date">May &ndash; July 2020</div>
+<div class="content">This was a ten-week internship at the Singapore office.  I built a low-latency order gateway to enable Jump to trade on a new exchange.  I also worked on improving various tools for testing and analysing past data, including using C++20 coroutines to bring usability improvements to some of these tools.  The internship culminated with a presentation on C++20 coroutines to the core development team in Jump's Asian offices.</div>
+<div class="content"><span class="semibold">Technologies:</span> C++14/17/20</div>
+</li>
+
 </ul>
 </div>
 <hr/>
@@ -102,18 +111,19 @@
 <div class="header">International Collegiate Programming Contest (ICPC)</div>
 <ul>
 <li>??? at ACM-ICPC World Finals 2020 (postponed to 2021)</li>
-<li>1<sup>st</sup> at ACM-ICPC Kuala Lumpur On-Site Regional Contest 2019</li>
-<li>4<sup>th</sup> at ACM-ICPC Bangkok On-Site Regional Contest 2019</li>
+<li>1<sup>st</sup> at ACM-ICPC Asia Kuala Lumpur On-Site Regional Contest 2019</li>
+<li>4<sup>th</sup> at ACM-ICPC Asia Bangkok On-Site Regional Contest 2019</li>
 <li>62<sup>nd</sup> at ACM-ICPC World Finals 2019</li>
-<li>7<sup>th</sup> at ACM-ICPC Singapore On-Site Regional Contest 2018</li>
-<li>1<sup>st</sup> at ACM-ICPC Yangon On-Site Regional Contest 2018</li>
-<li>5<sup>th</sup> at ACM-ICPC Jakarta On-Site Regional Contest 2017</li>
+<li>7<sup>th</sup> at ACM-ICPC Asia Singapore On-Site Regional Contest 2018</li>
+<li>1<sup>st</sup> at ACM-ICPC Asia Yangon On-Site Regional Contest 2018</li>
+<li>5<sup>th</sup> at ACM-ICPC Asia Jakarta On-Site Regional Contest 2017</li>
 </ul>
 </li>
 
 <li>
 <div class="header">Code Jam (Handle: btzy)</div>
 <ul>
+<li>163<sup>th</sup> (round 3) in 2020</li>
 <li>51<sup>st</sup> (round 3) in 2019</li>
 <li>295<sup>th</sup> (round 3) in 2018</li>
 <li>834<sup>th</sup> (round 2) in 2017</li>
@@ -162,8 +172,8 @@
 <li>
 <div class="header">Simon Marais Mathematics Competition (SMMC)</div>
 <ul>
-<li><a href="https://www.simonmarais.org/20183.html">Top Quartile in 2018 (scored 31 out of 56 points)</a></li>
 <li><a href="https://www.simonmarais.org/20191.html">Top Quartile in 2019 (scored 34 out of 56 points)</a></li>
+<li><a href="https://www.simonmarais.org/20183.html">Top Quartile in 2018 (scored 31 out of 56 points)</a></li>
 </ul>
 </li>
 
