Add CS4215 and MA3233 reviews and AY2021S1 TA

--- a/index.html
+++ b/index.html
@@ -223,6 +223,11 @@
 <li>CS2106 Introduction to Operating Systems (conduct lab sessions; design and grade assignments)</li>
 </ul>
 
+<p class="modulegroup">AY 20/21 Sem 1</p>
+<ul>
+<li>CS2106 Introduction to Operating Systems (conduct lab sessions; design and grade assignments)</li>
+</ul>
+
 </div>
 <hr/>
 
@@ -299,9 +304,9 @@
 
 <p class="modulegroup">AY 19/20 Sem 2</p>
 <ul>
-<li>CS4215 Programming Language Implementation | <a href="https://github.com/source-academy/sourceror">GitHub repository</a></li>
+<li>CS4215 Programming Language Implementation | <a href="nus/CS4215.txt">Review</a> | <a href="https://github.com/source-academy/sourceror">GitHub repository</a></li>
 <li>MA3111 Complex Analysis I | <a href="nus/MA3111 Reference.pdf">Cheatsheet</a></li>
-<li>MA3233 Combinatorics and Graphs II | <a href="nus/MA3233 Reference.pdf">Cheatsheet</a></li>
+<li>MA3233 Combinatorics and Graphs II | <a href="nus/MA3233.txt">Review</a> | <a href="nus/MA3233 Reference.pdf">Cheatsheet</a></li>
 <li>MA4211 Functional Analysis | <a href="nus/MA4211 Reference.pdf">Cheatsheet</a></li>
 <li>GET1001 Seeing the World Through Maps</li>
 </ul>
