Add additional link to GitHub

--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
 </li>
 
 </ul>
+
+<p>Check out my <a href="https://github.com/btzy">GitHub account</a> for my other software projects.</p>
+
 </div>
 <hr/>
 
