Add Jekyll support to use page layouts

--- a/index.html
+++ b/index.html
@@ -1,28 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-140068142-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-140068142-1');
-</script>
-
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Bernard Teo Zhi Yi</title>
-<link rel="stylesheet" type="text/css" href="style.css" />
-</head>
-
-<body>
-<div id="title">
-<div class="name">Bernard <span class="underline">Teo</span> Zhi Yi</div>
-<div><span class="keyname">Email: </span><a href="mailto:bernardteo@u.nus.edu">bernardteo@u.nus.edu</a> | <span class="keyname">GitHub: </span><a href="https://github.com/btzy">btzy</a> | <span class="keyname">LinkedIn: </span><a href="https://www.linkedin.com/in/bernard-teo/">bernard-teo</a></div>
-</div>
-<hr/>
+---
+layout: default
+title: Bernard Teo Zhi Yi
+---
 
 <div>
 <p>I am currently an undergraduate studying computer science and applied mathematics at the National University of Singapore (NUS).  This is a double degree programme, which will allow me to graduate with a Bachelor of Computing (BComp) in Computer Science, as well as a Bachelor of Science (BSc) in Applied Mathematics.  I am a recipient of the NUS Merit Scholarship.  I should graduate in November 2021.</p>
@@ -322,7 +301,3 @@
 (coming soon...)
 </div>
 <hr/>
-
-</body>
-
-</html>
