Add more details and reports for TA section

--- a/index.html
+++ b/index.html
@@ -188,27 +188,44 @@ title: Bernard Teo Zhi Yi
 <hr/>
 
 <div>
-<p><span class="keyname">NUS Modules Taught (teaching assistant):</span></p>
+<p><span class="keyname">NUS Modules Taught:</span></p>
+<p>NUS School of Computing provides opportunities for undergraduate students to be teaching assistants, usually by conducting tutorial and lab classes.  Undergraduate teaching assistants are chosen by the module coordinator, and usually have done well when they took the module as students.</p>
 
-<p class="modulegroup">AY 17/18 Sem 2</p>
-<ul>
-<li>CS2030 Programming Methodology II (conduct lab/tutorial sessions)</li>
+<ul class="detailedlist">
+
+<li>
+<div class="header">CS2106 Introduction to Operating Systems</div>
+<div class="date">AY 20/21 Sem 1 (August &ndash; November 2020)</div>
+<div class="content">This is the current semester.</div>
+</li>
+
+<li>
+<div class="header">CS2106 Introduction to Operating Systems</div>
+<div class="date">AY 19/20 Sem 1 (August &ndash; November 2019)</div>
+<div class="link"><a href="teaching/teacher_report_1920_sem1_CS2106_lab.pdf">Teacher Report</a> (overall score: 4.6/5)</div>
+<div class="content">Conduct lab sessions for 3 classes (61 students in total); designed, implemented, and graded one of the assignments.</div>
+</li>
+
+<li>
+<div class="header">CS2030 Programming Methodology II</div>
+<div class="date">AY 18/19 Sem 1 (August &ndash; November 2018)</div>
+<div class="link"><a href="teaching/teacher_report_1819_sem1_CS2030_lab.pdf">Teacher Report (lab)</a> (overall score: 4.8/5)</div>
+<div class="link"><a href="teaching/teacher_report_1819_sem1_CS2030_tutorial.pdf">Teacher Report (tutorial)</a> (overall score: 4.6/5)</div>
+<div class="link"><a href="teaching/text_analytics_report_1819_sem1.pdf">Aggregated Text Analytics Report</a></div>
+<div class="content">Conduct lab sessions for 1 class (14 students) and tutorial sessions for 1 class (19 students); designed and implemented one of the assignments.</div>
+</li>
+
+<li>
+<div class="header">CS2030 Programming Methodology II</div>
+<div class="date">AY 17/18 Sem 2 (January &ndash; April 2018)</div>
+<div class="link"><a href="teaching/teacher_report_1718_sem2_CS2030_lab.pdf">Teacher Report</a> (overall score: 4.7/5)</div>
+<div class="link"><a href="teaching/text_analytics_report_1718_sem2.pdf">Aggregated Text Analytics Report</a></div>
+<div class="content">Conduct lab sessions for 1 class (36 students).  Although a lab class in name, this was more like a tutorial class with weekly presentations and discussions that reinforced the content covered in the lectures.  I worked with <a href="https://sijie123.com/">Lin Si Jie</a> and Lim Heng Guang to teach this class.</div>
+</li>
+
 </ul>
 
-<p class="modulegroup">AY 18/19 Sem 1</p>
-<ul>
-<li>CS2030 Programming Methodology II (conduct lab/tutorial sessions)</li>
-</ul>
-
-<p class="modulegroup">AY 19/20 Sem 1</p>
-<ul>
-<li>CS2106 Introduction to Operating Systems (conduct lab sessions; design and grade assignments)</li>
-</ul>
-
-<p class="modulegroup">AY 20/21 Sem 1</p>
-<ul>
-<li>CS2106 Introduction to Operating Systems (conduct lab sessions; design and grade assignments)</li>
-</ul>
+<p><span class="more">Note:  NUS introduced a new module balloting system in AY 19/20 Sem 1, which significantly reduced students' incentive for providing feedback.</span></p>
 
 </div>
 <hr/>
