Add AY 20/21 sem 1 modules

--- a/index.html
+++ b/index.html
@@ -310,6 +310,15 @@ title: Bernard Teo Zhi Yi
 <li>GET1001 Seeing the World Through Maps</li>
 </ul>
 
+<p class="modulegroup">AY 20/21 Sem 1</p>
+<ul>
+<li>CM1131 Physical Chemistry 1</li>
+<li>CS4212 Compiler Design</li>
+<li>CS4232 Theory of Computation</li>
+<li>MA4270 Data Modelling and Computation</li>
+<li>XFC4101 Integrated Honours Thesis (year-long module)</li>
+</ul>
+
 </div>
 <hr/>
 
