Add some module planning advice

--- a/index.html
+++ b/index.html
@@ -234,6 +234,8 @@ title: Bernard Teo Zhi Yi
 <p><span class="keyname">NUS Modules Taken:</span></p>
 <p>Here is an exhaustive list of modules that I have taken in NUS.  Where available, you may use my cheatsheets for your studies (but I cannot guarantee the correctness or completeness of any information on them).  If you want the LaTeX source, you have to ask for it.</p>
 
+<p>I also maintain a page on general module planning advice <a href="advice">here</a>.</p>
+
 <p class="modulegroup">AY 13/14 Sem 2 (A-levels H3 programme)</p>
 <ul>
 <li>MA1101R Linear Algebra I</li>
